...
                android:layout_gravity="center"
                android:padding="@dimen/padding_small"
                android:src="@drawable/ic_action_attachment" />


            <EditText
                android:id="@+id/new_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/send_but"
                android:layout_toRightOf="@+id/add_url"
                android:hint="@string/prompt_new_comment"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textSize="@dimen/font_medium" />

...
