<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manage.people.address.fragment.ManagePeopleAddressFragment">

    <com.tokopedia.tkpd.customwidget.SwipeToRefresh
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            />

    </com.tokopedia.tkpd.customwidget.SwipeToRefresh>

</RelativeLayout>
