<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/image"
        android:layout_width="220dp"
        android:layout_height="180dp"
        tools:src="@tools:sample/avatars"
        tools:ignore="ContentDescription" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="258dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/Unify_NN950_96"
        android:text="@string/text_empty_product_list"
        android:gravity="center"
        app:typographyType="heading_4"
        app:typographyWeight="bold" />

    <com.tokopedia.unifyprinciples.Typography
        android:id="@+id/desc"
        android:layout_height="wrap_content"
        android:layout_width="328dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/Unify_NN950_96"
        android:gravity="center"
        app:typographyType="display_2" />

    <com.tokopedia.unifycomponents.UnifyButton
        android:id="@+id/btnResetFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:unifyButtonSize="medium"
        app:unifyButtonType="main"
        app:unifyButtonVariant="filled"
        android:text="@string/text_reset_filter" />

</LinearLayout>