...
    tools:showIn="layout/activity_login2"
    tools:context="com.tokopedia.core.com.tokopedia.session.session.fragment.LoginFragment">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/register_button"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
...
