...
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/white_button_rounded"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/sp_5"
            android:text="@string/change_button"
            android:textColor="@color/black_38"
            android:textSize="@dimen/sp_11"
            app:layout_constraintLeft_toLeftOf="@+id/image_ktp"
            app:layout_constraintRight_toRightOf="@+id/image_ktp"
            app:layout_constraintTop_toBottomOf="@+id/image_ktp"
            tools:text="Ubah" />
...
